[gd_scene load_steps=4 format=3 uid="uid://cds4kxtfn56wb"]

[ext_resource type="Script" uid="uid://c0lcu5txdj6ry" path="res://Scripts/UI/BookUI.gd" id="1_gd456"]
[ext_resource type="AudioStream" uid="uid://dhcog0kf0y16p" path="res://SFX/Page.wav" id="2_togv2"]
[ext_resource type="AudioStream" uid="uid://clueic74k1cgs" path="res://SFX/Click.wav" id="3_ij01p"]

[node name="BookUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gd456")

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.336
anchor_top = 0.889
anchor_right = 0.664
anchor_bottom = 1.0
offset_left = 0.427979
offset_top = -0.0720215
offset_right = -0.427979
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[node name="AbilityName" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.357
anchor_right = 0.643
anchor_bottom = 0.051
offset_left = -0.264038
offset_right = 0.263977
offset_bottom = -0.0480003
mouse_filter = 2

[node name="Icons" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.102
anchor_right = 0.5
anchor_bottom = 0.829
offset_top = -0.0960007
offset_bottom = -0.192017
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AbilityDetails" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.102
anchor_right = 1.0
anchor_bottom = 0.836
offset_top = -4.096
offset_bottom = 0.271973
mouse_filter = 2

[node name="PagePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_togv2")

[node name="ClickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ij01p")

[connection signal="button_up" from="Back" to="." method="_on_back_button_up"]
